@@ -22,26 +22,26 @@
 
 // Localizations are provided for all of the base languages supported by
 // CUPS...
-#po da ""
-#po de ""
-#po es ""
-#po et ""
-#po fi ""
-#po fr ""
-#po he ""
-#po id ""
-#po it ""
-#po ja ""
-#po ko ""
-#po nl ""
-#po no ""
-#po pl ""
-#po pt ""
-#po pt_BR ""
-#po ru ""
-#po sv ""
-#po zh ""
-#po zh_TW ""
+//#po da ""
+//#po de ""
+//#po es ""
+//#po et ""
+//#po fi ""
+//#po fr ""
+//#po he ""
+//#po id ""
+//#po it ""
+//#po ja ""
+//#po ko ""
+//#po nl ""
+//#po no ""
+//#po pl ""
+//#po pt ""
+//#po pt_BR ""
+//#po ru ""
+//#po sv ""
+//#po zh ""
+//#po zh_TW ""
 
 // MediaSize sizes used by label drivers...
 #media "w81h252/Address - 1 1/8 x 3 1/2\"" 81 252
